--- a/fifa_tournament/templates/matches/teams.html
+++ b/fifa_tournament/templates/matches/teams.html
@@ -2,7 +2,7 @@
 {% load js %}
 
 {% block body %}
-<div class="container"><h1>Times</h1></div>
+<div class="container"><h1>Torneio Hu1000des</h1></div>
 
 <div id="react-app"></div>
 {% endblock %}
